<resources>
    <string name="app_name">FairPedia</string>
    <string name="action_settings">Settings</string>
    <string name="nextS"><![CDATA[Next ->]]></string>
    <string name="user_nameS">User Name</string>
    <string name="birthdate_dd_mm_yyyyS">Birthdate(dd/mm/yyyy)</string>
    <string name="passwordS">Password</string>
    <string name="email_addresS">Email Address</string>
    <string name="re_type_passwordS">Re-type Password</string>
    <string name="genderS">Gender</string>
    <string name="maleS">Male</string>
    <string name="profession_detailsS">Profession(Details)</string>
    <string name="femaleS">Female</string>
    <string name="authorityS">Authority</string>
    <string name="normal_userS">Normal User</string>
    <string name="type_of_fairpedia_accountSS">Type of Fairpedia Account?</string>
    <string name="countryS">Country</string>
    <string name="usign_upS">Sign Up</string>
    <string name="zip_codeS">Zip Code</string>
    <string name="mobile_noS">Mobile No</string>
    <string name="cityS">City</string>
    <string name="ufirst_nameS">First Name</string>
    <string name="ulast_nameS">Last Name</string>
    <string name="auser_nameS">User Name</string>
    <string name="title_activity_normal_user_profile_and_stuffs">NormalUserProfileAndStuffs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="addressdfd">Address :</string>
    <string name="agedsf">Age:</string>
    <string name="change_profile_pictureewetet">Change Profile Picture</string>
    <string name="contact_noesee">Contact No :</string>
    <string name="emailseetqe">Email :</string>
    <string name="genderseqeq">Gender :</string>
    <string name="nameq3q3">Name :</string>
    <string name="professionwewwtt">Profession :</string>
    <string name="zip_codeq333">Zip Code :</string>
    <string name="title_activity_authority_profile_and_stuffs">AuthorityProfileAndStuffs</string>
    <string name="title_activity_host_profile_and_stuff">HostProfileAndStuff</string>
</resources>
