<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_login_gradients"

    tools:context="com.example.omeepc.fairpedia.SignUpUser">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radgrp_ugender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtview_ugender"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="9dp"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.515">

                <RadioButton
                    android:id="@+id/radbtn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maleS" />

                <RadioButton
                    android:id="@+id/radbtn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="31dp"
                    android:text="@string/femaleS" />
            </RadioGroup>

            <EditText
                android:id="@+id/edttxt_ufirstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                android:ems="10"
                android:hint="@string/ufirst_nameS"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:drawableLeft="@drawable/ic_action_nameuser"/>

            <EditText
                android:id="@+id/edttxt_ulastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ulast_nameS"
                android:inputType="textPersonName"
                android:textSize="24sp"
                android:layout_below="@+id/edttxt_ufirstname"
                android:layout_alignLeft="@+id/radgrp_ugender"
                android:layout_alignStart="@+id/radgrp_ugender"
                android:drawableLeft="@drawable/ic_action_nameuser"/>

            <EditText
                android:id="@+id/edttxt_uemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edttxt_ulastname"
                android:layout_alignStart="@+id/edttxt_ulastname"
                android:layout_below="@+id/edttxt_ulastname"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/email_addresS"
                android:inputType="textEmailAddress"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:drawableLeft="@drawable/ic_action_name"/>

            <EditText
                android:id="@+id/edttxt_upassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edttxt_uemail"
                android:layout_alignStart="@+id/edttxt_uemail"
                android:layout_below="@+id/edttxt_uemail"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/passwordS"
                android:inputType="textPassword"
                android:textSize="24sp"
                android:drawableLeft="@drawable/ic_action_pass"/>

            <EditText
                android:id="@+id/edttxt_uretypepassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edttxt_upassword"
                android:layout_alignStart="@+id/edttxt_upassword"
                android:layout_below="@+id/edttxt_upassword"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/re_type_passwordS"
                android:inputType="textPassword"
                android:textSize="24sp"
                android:drawableLeft="@drawable/ic_action_pass" />

            <TextView
                android:id="@+id/txtview_ugender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edttxt_uretypepassword"
                android:layout_alignStart="@+id/edttxt_uretypepassword"
                android:layout_below="@+id/edttxt_uretypepassword"
                android:layout_marginTop="35dp"
                android:text="@string/genderS"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edttxt_uprofession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edttxt_ubirthdate"
                android:layout_alignStart="@+id/edttxt_ubirthdate"
                android:layout_below="@+id/edttxt_ubirthdate"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/profession_detailsS"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textSize="24sp"
                android:drawableLeft="@drawable/ic_action_name_run"/>

            <EditText
                android:id="@+id/edttxt_ubirthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/radgrp_ugender"
                android:layout_alignStart="@+id/radgrp_ugender"
                android:layout_below="@+id/radgrp_ugender"
                android:layout_marginTop="22dp"
                android:ems="10"
                android:hint="@string/birthdate_dd_mm_yyyyS"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="24sp"
                android:drawableLeft="@drawable/ic_action_name_date"/>

            <TextView
                android:id="@+id/txtview_ucountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtview_ugender"
                android:layout_alignStart="@+id/txtview_ugender"
                android:layout_below="@+id/edttxt_uprofession"
                android:layout_marginTop="26dp"
                android:text="@string/countryS"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_ucountry"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtview_ucountry"
                android:layout_alignStart="@+id/txtview_ucountry"
                android:layout_below="@+id/txtview_ucountry"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/txtview_ucity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinner_ucountry"
                android:layout_alignStart="@+id/spinner_ucountry"
                android:layout_below="@+id/spinner_ucountry"
                android:layout_marginTop="11dp"
                android:text="@string/cityS"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_ucity"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtview_ucity"
                android:layout_alignStart="@+id/txtview_ucity"
                android:layout_below="@+id/txtview_ucity"
                android:layout_marginTop="11dp" />

            <TextView
                android:id="@+id/txtview_uzipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/spinner_ucity"
                android:layout_alignStart="@+id/spinner_ucity"
                android:layout_below="@+id/spinner_ucity"
                android:layout_marginTop="20dp"
                android:text="@string/zip_codeS"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edttxt_uzipcode"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtview_uzipcode"
                android:layout_alignStart="@+id/txtview_uzipcode"
                android:layout_below="@+id/txtview_uzipcode"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:inputType="number"
                android:drawableLeft="@drawable/ic_action_name_zip"/>

            <TextView
                android:id="@+id/txtview_umobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/edttxt_uzipcode"
                android:layout_alignStart="@+id/edttxt_uzipcode"
                android:layout_below="@+id/edttxt_uzipcode"
                android:layout_marginTop="13dp"
                android:text="@string/mobile_noS"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edttxt_umobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:ems="10"
                android:inputType="phone"
                android:layout_below="@+id/txtview_umobileno"
                android:layout_alignLeft="@+id/edttxt_ufirstname"
                android:layout_alignStart="@+id/edttxt_ufirstname"
                android:drawableLeft="@drawable/ic_action_name_mobile"/>

            <Button
                android:id="@+id/btn_signupuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edttxt_umobileno"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="49dp"
                android:text="@string/usign_upS"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>


</android.widget.RelativeLayout>
